--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "install-server": "cd server && npm install",
+    "start-server": "cd server && node app.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
